--- a/trace-agent/pom.xml
+++ b/trace-agent/pom.xml
@@ -27,7 +27,13 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>transmittable-thread-local</artifactId>
-            <version>2.2.0</version>
+            <version>2.12.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-debug-all</artifactId>
+            <version>5.0.3</version>
         </dependency>
     </dependencies>
 
