--- a/apm-view/src/main/resources/application.yml
+++ b/apm-view/src/main/resources/application.yml
@@ -5,3 +5,11 @@ spring:
     elasticsearch:
       cluster-nodes: 47.96.41.209:9300
       cluster-name: docker-cluster
+
+  freemarker:
+    template-loader-path: classpath:/templates/
+    suffix: .ftlh # springboot 2.xx 后缀为 ftlh
+    cache: false
+# 静态资源 js，css
+  resources:
+    static-locations: classpath:/static/
